<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/srch" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_bck"
            android:title="@string/lgout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/abtus"
                android:icon="@drawable/ic_android_black_24dp"
                android:title="@string/abtus" />
            <item
                android:id="@+id/tandc"
                android:icon="@drawable/ic_tnc"
                android:title="@string/tnc" />
        </menu>
    </item>

</menu>
