<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationDesc"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:id="@+id/branch"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sem"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@android:color/black"
            android:id="@+id/semester"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srt"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:id="@+id/srt_date1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@android:color/black"
            android:id="@+id/end_date1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:id="@+id/title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:id="@+id/domain1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:id="@+id/desc1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:id="@+id/summary1"/>

    </LinearLayout>

</LinearLayout>
